  * Update Vcs-* fields to non-redirected URLs.

  [ Josselin Mouette ]
  * Update repository URL.

  [ Emilio Pozuelo Monfort ]
  * New upstream release.
    + Doesn't use deprecated udev functions. Closes: #705521.
    + debian/control.in:
      - Update build dependencies.
    + debian/install:
      - Renamed to debian/system-config-printer.install.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Tue, 16 Apr 2013 17:36:18 +0200

system-config-printer (1.3.7-4) unstable; urgency=low

  * debian/control.in: Add missing Depends against python-dbus
    (Closes: #627810)
  * debian/python-cupshelpers.install: Install missing
    /etc/cupshelpers/preferreddrivers.xml file (Closes: #695582)
  * debian/patches/0005-Fix-French-translation.patch: Fix confusing French
    translation (Closes: #615113)

 -- Laurent Bigonville <bigon@debian.org>  Fri, 25 Jan 2013 21:53:18 +0100

system-config-printer (1.3.7-3) unstable; urgency=low

  * Upload to unstable
  * Bump standards version to 3.9.2. No source changes.
  * Remove now superfulous '/usr/bin/env' removal.  Upstream removed this
    already.
  * Adjust download URL

 -- Guido Günther <agx@sigxcpu.org>  Thu, 22 Dec 2011 19:46:52 +0100

system-config-printer (1.3.7-2) experimental; urgency=low

  * Add pycurl dependency to control.in too.
    Thanks; Michael Biebl (Closes: #652387)

 -- Guido Günther <agx@sigxcpu.org>  Sat, 17 Dec 2011 12:56:42 +0100

system-config-printer (1.3.7-1) experimental; urgency=low

  * New upstream version 1.3.7 (Closes: #642211)
  * Update watch file.
    Upstream uses xz now (Closes: #646320)
  * Drop superfluous patches.
        0003-Adjust-package-names.patch
        0004-Fix-blacklist-name.patch
        0005-Revert-to-the-correct-menu-category.patch
        0006-Don-t-blindly-listen-to-any-signal.patch
  * configure: Enable installation of udev rule
  * Fix MITM via unencrypted metadata download (CVE-2011-4405).
    Patch taken from Ubuntu. Thanks to Till Kamppeter
